os-files/kustomize/env/stub/custom/routes/mail-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: mail
spec:
  host: mail-openshiftEnvKey.apps.ocp4.staging.innovateuk.ukri.org
  port:
    targetPort: 4443-tcp
  tls:
    termination: passthrough
    insecureEdgeTerminationPolicy: Redirect
  to:
    kind: Service
    name: mail
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: mail-openshiftEnvKey.apps.ocp4.staging.innovateuk.ukri.org
      routerName: router
