os-files/kustomize/env/stub/custom/routes/shib-route.yml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    haproxy.router.openshift.io/balance: roundrobin
  name: shib
spec:
  host: openshiftEnvKey.apps.org-env-0.org.innovateuk.ukri.org
  port:
    targetPort: 443-tcp
  tls:
    termination: passthrough
  to:
    kind: Service
    name: shib
    weight: 100
status:
  ingress:
    - conditions:
        - status: 'True'
          type: Admitted
      host: openshiftEnvKey.apps.org-env-0.org.innovateuk.ukri.org
      routerName: router
      wildcardPolicy: None
